--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<h1 class="text-3xl font-bold underline">
+<h1 class="text-3xl font-bold underline text-white">
   Hello world!
 </h1><router-outlet />
