--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,5 +1,5 @@
 <div>
-  <button>
+  <button (click)="onSelctUser()">
     <img src="{{ imagePATH }}" alt="{{ slectedUser.name }}" />
     <!-- string interpolation -->
     <span>{{ slectedUser.name }}</span>
