Refactor user component to improve image path computation and enhance user selection logging

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,9 +1,6 @@
 <div>
   <button (click)="onSelctUser()">
-    <img src="{{ imagePATH }}" alt="{{ name }}" />
-    <!--
-    string interpolation is used to bind the value of the expression to the element
-     -->
+    <img src="{{ image() }}" alt="{{ name }}" />
     <span>{{ name }}</span>
   </button>
 </div>
