--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,16 +3,36 @@
   <main>
     <ul id="users">
       <li>
-        <app-user [avatar]="users[0].avatar" [name]="users[0].name" />
+        <app-user
+          [id]="users[0].id"
+          [name]="users[0].name"
+          [avatar]="users[0].avatar"
+          (selected)="onSelectedUser($event)"
+        />
       </li>
       <li>
-        <app-user [avatar]="users[1].avatar" [name]="users[1].name" />
+        <app-user
+          [id]="users[1].id"
+          [name]="users[1].name"
+          [avatar]="users[1].avatar"
+          (selected)="onSelectedUser($event)"
+        />
       </li>
       <li>
-        <app-user [avatar]="users[2].avatar" [name]="users[2].name" />
+        <app-user
+          [id]="users[2].id"
+          [name]="users[2].name"
+          [avatar]="users[2].avatar"
+          (selected)="onSelectedUser($event)"
+        />
       </li>
       <li>
-        <app-user [avatar]="users[3].avatar" [name]="users[3].name" />
+        <app-user
+          [id]="users[3].id"
+          [name]="users[3].name"
+          [avatar]="users[3].avatar"
+          (selected)="onSelectedUser($event)"
+        />
       </li>
     </ul>
   </main>
