--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,6 +1,6 @@
 <div>
   <button (click)="onSelctUser()">
-    <img src="{{ image() }}" alt="{{ name }}" />
-    <span>{{ name }}</span>
+    <img src="{{ image() }}" alt="{{ user.name }}" />
+    <span>{{ user.name }}</span>
   </button>
 </div>
