--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,10 @@
       </li>
       }
     </ul>
+    @if (selectedUser) {
     <app-tasks [name]="selectedUser.name" />
+    }@else {
+    <p>Select a user to see their tasks</p>
+    }
   </main>
 </router-outlet>
