Refactor tasks component structure and styles for improved layout and readability

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
     @if (selectedUser) {
     <app-tasks [name]="selectedUser.name" />
     }@else {
-    <p>Select a user to see their tasks</p>
+    <h2>Select a user to see their tasks</h2>
     }
   </main>
 </router-outlet>
