--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,1 +1,15 @@
-<p>{{name}}</p>
+<section id="tasks">
+  <header>
+    <h2>{{ name }}'s Tasks</h2>
+    <menu>
+      <button>Add Task</button>
+    </menu>
+  </header>
+  <ul>
+    <!-- @for (task of tasks; track task.id) {
+      <li key="{task.id}">
+        <app-task [task]="task" (selected)="onSelectedTask($event)" />
+      </li>
+    } -->
+  </ul>
+</section>
