--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -6,10 +6,8 @@
     </menu>
   </header>
   <ul>
-    <!-- @for (task of tasks; track task.id) {
-      <li key="{task.id}">
-        <app-task [task]="task" (selected)="onSelectedTask($event)" />
-      </li>
-    } -->
+    <li>
+      <app-task />
+    </li>
   </ul>
 </section>
