Enhance task component with detailed task display and integrate task filtering by user

--- a/src/app/tasks/task/task.component.html
+++ b/src/app/tasks/task/task.component.html
@@ -1,1 +1,16 @@
-<p>task works!</p>
+<article>
+  <h2>{{ task.title }}</h2>
+  <!-- <time datetime="">{}</time> -->
+  <time [attr.datetime]="task.dueDate.toISOString()"
+    >{{
+      task.dueDate.toLocaleTimeString([], {
+        hour: "2-digit",
+        minute: "2-digit"
+      })
+    }}
+  </time>
+  <p>{{ task.summary }}</p>
+  <p class="actions">
+    <button>compleate</button>
+  </p>
+</article>
