--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
       }
     </ul>
     @if (selectedUser) {
-    <app-tasks [name]="selectedUser.name" />
+    <app-tasks [name]="selectedUser.name" [userId]="selectedUser.id" />
     }@else {
     <h2>Select a user to see their tasks</h2>
     }
