--- a/src/app/tasks/new-task/new-task.component.html
+++ b/src/app/tasks/new-task/new-task.component.html
@@ -1,24 +1,36 @@
-<div class="backdrop" (click)="onClse()"></div>
+<div class="backdrop" (click)="onClose()"></div>
 <dialog open>
   <h2>Add Task</h2>
-  <form>
+  <form (ngSubmit)="onSubmit()">
     <p>
       <label for="title">Title</label>
-      <input type="text" id="title" name="title" />
+      <input type="text" id="title" name="title" [(ngModel)]="title" required />
     </p>
 
     <p>
       <label for="summary">Summary</label>
-      <textarea id="summary" rows="5" name="summary"></textarea>
+      <textarea
+        required
+        id="summary"
+        rows="4"
+        name="summary"
+        [(ngModel)]="summary"
+      ></textarea>
     </p>
 
     <p>
       <label for="due-date">Due Date</label>
-      <input type="date" id="due-date" name="due-date" />
+      <input
+        type="date"
+        id="due-date"
+        name="due-date"
+        [(ngModel)]="dueDate"
+        required
+      />
     </p>
 
     <p class="actions">
-      <button type="button" (click)="onClse()">Cancel</button>
+      <button type="button" (click)="onClose()">Cancel</button>
       <button type="submit">Create</button>
     </p>
   </form>
