--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,5 +1,5 @@
 @if (isAddingTask) {
-<app-new-task (close)="onCloseTask()" />
+<app-new-task (close)="onCloseTask()" (submit)="onSubmitTask($event)" />
 }
 <section id="tasks">
   <header>
@@ -9,7 +9,7 @@
     </menu>
   </header>
   <ul>
-    @for (task of selectedUserTasks; track task.id) {
+    @for (task of selectedUserTasks; track task.title) {
     <li>
       <app-task [task]="task" (complete)="onCompleteTask($event)" />
     </li>
