--- a/src/app/tasks/new-task/new-task.component.html
+++ b/src/app/tasks/new-task/new-task.component.html
@@ -1,7 +1,7 @@
 <div class="backdrop" (click)="onClose()"></div>
 <dialog open>
   <h2>Add Task</h2>
-  <form (ngSubmit)="onSubmit()">
+  <form>
     <p>
       <label for="title">Title</label>
       <input type="text" id="title" name="title" [(ngModel)]="title" required />
@@ -31,7 +31,7 @@
 
     <p class="actions">
       <button type="button" (click)="onClose()">Cancel</button>
-      <button type="submit">Create</button>
+      <button type="submit" (click)="onSubmit()">Create</button>
     </p>
   </form>
 </dialog>
