--- a/src/app/tasks/task/task.component.html
+++ b/src/app/tasks/task/task.component.html
@@ -1,8 +1,11 @@
-<article>
-  <h2>{{ task.title }}</h2>
-  <time [attr.datetime]="task.dueDate">{{ task.dueDate }} </time>
-  <p>{{ task.summary }}</p>
-  <p class="actions">
-    <button (click)="onCompleteTask()">compleate</button>
-  </p>
-</article>
+<app-card>
+  <article>
+    <h2>{{ task.title }}</h2>
+    <time [attr.datetime]="task.dueDate">{{ task.dueDate | date
+     }} </time>
+    <p>{{ task.summary }}</p>
+    <p class="actions">
+      <button (click)="onCompleteTask()">compleate</button>
+    </p>
+  </article>
+</app-card>
