Refactor new task component to use TasksService for task addition; update task ID generation logic

--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,5 +1,9 @@
 @if (isAddingTask) {
-<app-new-task (close)="onCloseTask()" (submit)="onSubmitTask($event)" />
+<app-new-task
+  (close)="onCloseTask()"
+  (submit)="onSubmitTask($event)"
+  [userId]="userId"
+/>
 }
 <section id="tasks">
   <header>
