Refactor task submission handling in tasks component; remove task parameter from submit method

--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,7 +1,7 @@
 @if (isAddingTask) {
 <app-new-task
   (close)="onCloseTask()"
-  (submit)="onSubmitTask($event)"
+  (submit)="onSubmitTask()"
   [userId]="userId"
 />
 }
